<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FileListFragment">

    <fragment
        android:id="@+id/FileListFragment"
        android:name="com.drvidal.pdfreader.presentation.filelist.FileListFragment"
        android:label="@string/pdf_files"
        tools:layout="@layout/fragment_file_list">

        <action
            android:id="@+id/action_FileListFragment_to_PDFRenderFragment"
            app:destination="@id/PDFRenderFragment" />
        <action
            android:id="@+id/action_FileListFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/PDFRenderFragment"
        android:name="com.drvidal.pdfreader.presentation.pdfrender.PDFRenderFragment"
        android:label="@string/pdf_render"
        tools:layout="@layout/fragment_pdf_render">

        <argument
            android:name="fileUri"
            app:argType="com.drvidal.pdfreader.data.FileUri" />

    </fragment>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.drvidal.pdfreader.presentation.settings.SettingsFragment"
        android:label="@string/action_settings" />
</navigation>